--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -32,6 +32,7 @@
 		"unassigned_groups": "Unassigned Groups"
 	},
 	"all": "All",
+	"ard": "Apple Remote Desktop",
 	"auth": {
 		"addtoconfig": "Add this line to config.php:",
 		"back_to_site": "Back to site",
@@ -54,6 +55,7 @@
 	"boot_time": "Booted",
 	"bundle_id": "BundleID",
 	"business_unit": {
+		"machine_group": "Machine Group",
 		"machine_groups": "Machine Groups",
 		"managers": "Managers",
 		"users": "Users"
@@ -79,7 +81,8 @@
 			"profiles": "Profiles",
 			"serverstats": "Server Statistics",
 			"summary": "Summary",
-			"third_party_software": "Third Party Software"
+			"third_party_software": "Third Party Software",
+			"timemachine": "Timemachine"
 		},
 		"installed_apple_software": "Installed Apple Software",
 		"installed_third_party_software": "Installed Third Party Software",
@@ -96,6 +99,10 @@
 	},
 	"configuration": "Configuration",
 	"cpu": {
+		"arch": "CPU Architecture",
+		"core": "core",
+		"cpu": "CPU",
+		"type": "CPU Type",
 		"usage": "Processor Usage"
 	},
 	"date": {
@@ -129,7 +136,13 @@
 		"title": "Set filters"
 	},
 	"free_disk_space": "Free Disk Space",
+	"hardware": {
+		"hardware": "Hardware",
+		"uuid": "Hardware UUID"
+	},
 	"installed": "Installed",
+	"last_seen": "Last Seen",
+	"last_user": "Last User",
 	"listing": {
 		"ard": {
 			"text": "Text __number__",
@@ -178,6 +191,7 @@
 		"usage": "Memory Usage",
 		"pressure": "Memory Pressure"
 	},
+	"model": "Model",
 	"name": "Name",
 	"nav": {
 		"admin": {
@@ -225,17 +239,22 @@
 	},
 	"network": {
 		"ethernet": "Ethernet",
+		"hostname": "Hostname",
 		"ip_address": "IP Address",
+		"network": "Network",
 		"network_mask": "Mask",
 		"prefix_length": "Prefix length",
 		"router": "Router",
 		"traffic": "Network Traffic",
 		"inbound_traffic": "Inbound Traffic",
-		"outbound_traffic": "Outbound Traffic"
+		"outbound_traffic": "Outbound Traffic",
+		"remote_ip": "Remote IP Address"
 	},
 	"no_clients": "No Clients",
+	"no_data": "No Data",
 	"pending": "Pending",
 	"path": "Path",
+	"reg_date": "Registration Date",
 	"remote_control": "Remote Control",
 	"serial": "Serial Number",
 	"sharing": {
@@ -244,25 +263,46 @@
 		"smb_users": "SMB Users"
 	},
 	"show": "Show",
-	"software": "Software",
+	"software": {
+		"software": "Software",
+		"smc_version": "SMC Version",
+		"boot_rom_version": "Boot ROM Version"
+	},
+	"storage": {
+		"free": "Free",
+		"size": "Disk Size",
+		"smartstatus": "SMART status",
+		"storage": "Storage",
+		"used": "Used"
+	},
 	"system": {
 		"system": "System"
+	},
+	"timemachine": {
+		"timemachine": "Timemachine"
 	},
 	"unavailable": "Unavailable",
 	"unauthorized": "You are not authorized",
 	"unknown": "Unknown",
+	"uptime": "Uptime",
 	"user": {
-		"user": "User"
+		"user": "User",
+		"users": "Users",
+		"local_admin": "Local admin"
 	},
 	"version": "Version",
 	"warning": "Warning",
 	"warning_plural": "Warnings",
 	"warranty": {
-		"supported_until": "Supported until __date__",
-		"supported_no_applecare": "Supported until __date__. No Applecare",
-		"unregistered": "Unregistered",
+		"coverage": "Warranty Coverage",
+		"est_manufacture_date": "Est. Manufacture Date",
+		"est_purchase_date": "Est. Purchase date",
 		"expired": "Expired on __date__",
-		"coverage": "Warranty Coverage"
+		"recheck": "Recheck Warranty Status",
+		"supported_no_applecare": "Supported until __date__. No Applecare",
+		"supported_until": "Supported until __date__",
+		"unregistered": "Unregistered",
+		"warranty": "Warranty"
 	},
 	"widget": {
 		"age": {
