--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -79,6 +79,7 @@
 			"apple_software": "Apple Software",
 			"ard": "ARD",
 			"bluetooth": "Bluetooth",
+			"certificates": "Certificates",
 			"displays": "Displays",
 			"ds": "Directory Services",
 			"fv_escrow": "Filevault Escrow",
