--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -333,6 +333,12 @@
 			"service": "Service Now",
 			"soon": "Service Soon",
 			"nobattery": "No Battery"
+		},
+		"timemachine": {
+			"lastweek": "Backed up less than a week ago",
+			"title": "Timemachine Status",
+			"today": "Backupped Today",
+			"week_plus": "Backed up more than a week ago"
 		}
 	}
 }
