Add Backup Report

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -235,6 +235,7 @@
 		  "admin": "Admin"
 		},
 		"reports": {
+			"backup": "Backup Report",
 			"clients": "Client report",
 			"configuration": "Configuration report",
 			"hardware": "Hardware report",
