--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -327,6 +327,12 @@
 			"info": "Totals since this data is being collected",
 			"title": "Bound to a Directory Service"
 		},
+		"certificate": {
+			"expired": "Expired",
+			"ok": "Valid for more than three months",
+			"soon": "Expires within three months",
+			"title": "Certificates"
+		},
 		"power": {
 			"missing": "Missing",
 			"normal": "Normal",
