--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -20,7 +20,8 @@
 		"mg": {
 			"title": "Machine Groups",
 			"add_group": "New Group",
-			"edit_group": "Edit Machine Group"
+			"edit_group": "Edit Machine Group",
+			"new_group": "New Machine Group"
 		},
 		"new_bu": {
 			"title": "New Business Unit"
