Add storage tab

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -303,16 +303,20 @@
 	},
 	"status": "Status",
 	"storage": {
+		"bus_protocol": "BUS Protocol",
 		"encrypted": "Encrypted",
 		"encryption_status": "Encryption Status",
+		"external": "External",
 		"free": "Free",
-		"not_encrypted": "Not Encrypted",
+		"internal": "Internal",
 		"mountpoint": "Mount Point",
+		"not_encrypted": "Not Encrypted",
 		"percentage": "Percentage",
 		"size": "Disk Size",
 		"smartstatus": "SMART status",
 		"storage": "Storage",
 		"total_size": "Size",
+		"type": "Storage Type",
 		"used": "Used",
 		"volume_type": "Volume Type"
 	},
