Add commenting to client summary

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -80,6 +80,7 @@
 		"from_cache": "From Cache"
 	},
 	"client": {
+		"comment": "Comments",
 		"tab": {
 			"apple_software": "Apple Software",
 			"ard": "ARD",
