Fixed typo "Registratierungsdatum" -> "Registrierungsdatum"

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -271,7 +271,7 @@
 	},
 	"pending": "Ausstehend",
 	"path": "Pfad",
-	"reg_date": "Registratierungsdatum",
+	"reg_date": "Registrierungsdatum",
 	"remote_control": "Fernsteuerung",
 	"report": {
 		"generate": "Bericht erzeugen"
