Added translation for "Comment"-Tab

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -76,6 +76,7 @@
 		"from_cache": "Aus dem Cache"
 	},
 	"client": {
+		"comment": "Kommentar",
 		"tab": {
 			"apple_software": "Apple Software",
 			"ard": "ARD",
