Bluetooth module changes
Add support for legacy client script, fix bluetooth status

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -272,6 +272,8 @@
 	},
 	"no_clients": "No Clients",
 	"no_data": "No Data",
+	"on": "On",
+	"off": "Off",
 	"os": {
 		"version": "OS Version"
 	},
