Initial tag support

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -338,6 +338,9 @@
 	"system": {
 		"system": "System"
 	},
+	"tags": {
+		"add_tag": "Add Tag"
+	},
 	"timemachine": {
 		"timemachine": "Timemachine"
 	},
