Add Crashplan widget

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -136,6 +136,9 @@
 	"crashplan": {
 		"listing": {
 			"title": "CrashPlan Report"
+		},
+		"widget": {
+			"title": "CrashPlan Status"
 		}
 	},
 	"date": {
