Crash plan module changes
move widget into module directory
localisation updates

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -58,6 +58,7 @@
 		"wrong_user_or_pass": "Wrong username or password"
 	},
 	"backup":{
+		"destination": "Backup Destination",
 		"duration": "Backup duration",
 		"last_failure": "Last failed backup",
 		"last_failure_msg": "Message",
