--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -100,6 +100,7 @@
 			"munki": "Managed Software",
 			"network": "Network Interfaces",
 			"power": "Power",
+			"printers": "Printers",
 			"profiles": "Profiles",
 			"serverstats": "Server Statistics",
 			"summary": "Summary",
@@ -255,6 +256,7 @@
 			"munki": "Munki",
 			"network": "Network",
 			"power": "Power",
+			"printers": "Printers",
 			"profile": "Profiles",
 			"security": "Security",
 			"timemachine": "Timemachine",
