Fixed and RESTified printers module

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -318,7 +318,7 @@
 		"name": "Printer Name",
 		"ppd": "PPD",
 		"driver_version": "Driver Version",
-		"url": "URL":,
+		"url": "URL",
 		"default_set": "Default Set",
 		"printer_status": "Printer Status",
 		"printer_sharing": "Printer Sharing"
