RESTified duplicate computer names

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -443,6 +443,9 @@
 			"soon": "Expires within three months",
 			"title": "Certificates"
 		},
+		"duplicate_computernames": {
+			"notfound": "No duplicates found"
+		},
 		"power": {
 			"missing": "Missing",
 			"normal": "Normal",
