RESTified pending apple and munki widgets

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -457,6 +457,9 @@
 		"duplicate_computernames": {
 			"notfound": "No duplicates found"
 		},
+		"munki": {
+			"no_updates_pending": "No Updates Pending"
+		},
 		"power": {
 			"missing": "Missing",
 			"normal": "Normal",
