--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -262,9 +262,15 @@
 	},
 	"model": "Model",
 	"munki": {
+		"error": "Munki error: __error__",
+		"error_plural": "__count__ Munki errors",
+		"package_installed": "__pkg__ installed",
+		"package_installed_plural": "__count__ packages installed",
 		"panel_title": "Munki statistics this week",
 		"run_type": "Run Type",
-		"version": "Munki Version"
+		"version": "Munki Version",
+		"warning": "Munki warning: __warning__",
+		"warning_plural": "__count__ Munki warnings"
 	},
 	"name": "Name",
 	"nav": {
@@ -341,6 +347,7 @@
 	"path": "Path",
 	"pending": "Pending",
 	"pkg_failed_to_install": "__pkg__ failed to install: __reason__",
+	"pkg_failed_to_install_plural": "__count__ packages failed to install",
 	"reg_date": "Registration Date",
 	"remote_control": "Remote Control",
 	"report": {
